--- a/style.css
+++ b/style.css
@@ -48,3 +48,8 @@ footer{
   margin-top:40px;
 }
 footer a{color:#25D366;text-decoration:none;}
+footer a{
+  color:#25D366;
+  text-decoration:none;
+  font-weight:bold;
+}
