--- a/style.css
+++ b/style.css
@@ -94,3 +94,13 @@ footer a {
   background: #1da851;
   transform: scale(1.05);
 }
+.form {
+  text-align:center;
+  padding:30px;
+}
+.form input {
+  display:block;
+  margin:10px auto;
+  padding:10px;
+  width:80%;
+}
