--- a/style.css
+++ b/style.css
@@ -196,3 +196,13 @@ footer a {
   border-radius: 20px;
   text-decoration: none;
 }
+.card img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+}
+
+.card img:not([src]), 
+.card img[src=""] {
+  display: none;
+}
